k8s/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: react-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react.local # Cambia esto por el dominio que estés utilizando
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app # Nombre del servicio que se expondrá a través del Ingress
                port:
                  number: 80 # Puerto del servicio al que se redirigirán las solicitudes
